# django-utm-tracker

./: .coveragerc  .flake8  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  CHANGELOG  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: tox.yml
tests/: __init__.py  apps.py  models.py  settings.py  test_integration.py  test_middleware.py  test_models.py  test_request.py  test_session.py  urls.py  views.py
tests/migrations/: 0001_initial.py  0002_auto_20210126_0955.py  0003_alter_user_first_name.py
utm_tracker/: __init__.py  admin.py  apps.py  middleware.py  models.py  request.py  session.py  settings.py  types.py
utm_tracker/migrations/: 0001_initial.py  0002_leadsource_created_at.py  0003_increase_medium_chars.py  0004_leadsource_gclid.py  0004_leadsource_session_key.py  0005_auto_20210809_1259.py  0006_leadsource_custom_tags.py  0007_alter_leadsource_content.py  0008_increase_charfield_lengths.py  0009_alter_leadsource_timestamp.py
